--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-
+spring:
+  application:
+    name: SPRING-BOOT-DEMO-MYSQL-DOCKER
+  server:
+    port: 8081
+  datasource:
+    url: jdbc:mysql://localhost:3306/spring_boot_demo_mysql_docker?serverTimezone=Africa/Douala&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+    username: root
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        format_sql: true
+  sql:
+    init:
+      mode: always
+      encoding: UTF-8
